Added User registration functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.profiles.active=local
-spring.profiles.active=dev
+spring.profiles.active=local
 
 #Actuator
 #management.endpoints.jmx.exposure.include=health,metrics,info,env,beans,configprops
